// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar When menu is open should render and match snapshot 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <div
        class="page__sidebar page__sidebar--open"
      >
        <div
          class="page__sidebar__items"
        >
          <div
            class="page__sidebar__items__item"
          >
            <img
              src="undefined"
            />
            Welcome 
          </div>
          <div
            class="page__sidebar__items__item"
          >
            <img
              src="undefined"
            />
            Get free insurance 
          </div>
        </div>
        <button-stub
          class="page__sidebar__file-a-claim-action"
          disabled="false"
          imagebutton="false"
        />
      </div>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
        },
        "transition-group": Object {
          "name": "transition-group",
        },
      },
      "config": Object {
        "compilerOptions": Object {},
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "emitsCache": WeakMap {},
      "mixins": Array [
        Object {
          "beforeCreate": [Function],
        },
      ],
      "optionsCache": WeakMap {},
      "propsCache": WeakMap {},
      "provides": Object {},
      "reload": [Function],
    },
    "_instance": Object {
      "a": null,
      "accessCache": Object {},
      "appContext": Object {
        "app": [Circular],
        "components": Object {
          "transition": Object {
            "name": "transition",
          },
          "transition-group": Object {
            "name": "transition-group",
          },
        },
        "config": Object {
          "compilerOptions": Object {},
          "errorHandler": undefined,
          "globalProperties": Object {},
          "isNativeTag": [Function],
          "optionMergeStrategies": Object {},
          "performance": false,
          "warnHandler": undefined,
        },
        "directives": Object {},
        "emitsCache": WeakMap {},
        "mixins": Array [
          Object {
            "beforeCreate": [Function],
          },
        ],
        "optionsCache": WeakMap {},
        "propsCache": WeakMap {},
        "provides": Object {},
        "reload": [Function],
      },
      "asyncDep": null,
      "asyncResolved": false,
      "attrs": Object {},
      "bc": null,
      "bm": null,
      "bu": null,
      "bum": null,
      "c": null,
      "components": null,
      "ctx": Object {},
      "da": null,
      "data": Object {},
      "directives": null,
      "ec": null,
      "effect": ReactiveEffect {
        "active": true,
        "allowRecurse": true,
        "deps": Array [
          Set {
            [Circular],
          },
          Set {
            [Circular],
          },
          Set {
            [Circular],
          },
        ],
        "fn": [Function],
        "onTrack": undefined,
        "onTrigger": undefined,
        "scheduler": [Function],
      },
      "emit": [Function],
      "emitsOptions": null,
      "emitted": null,
      "exposeProxy": null,
      "exposed": null,
      "inheritAttrs": undefined,
      "isDeactivated": false,
      "isMounted": true,
      "isUnmounted": false,
      "m": null,
      "next": null,
      "parent": null,
      "props": Object {},
      "propsDefaults": Object {},
      "propsOptions": Array [
        Object {},
        Array [],
      ],
      "provides": Object {},
      "proxy": Object {},
      "refs": Object {
        "VTU_COMPONENT": Object {
          "hasOwnProperty": [Function],
          "isMenuOpen": true,
        },
      },
      "render": [Function],
      "renderCache": Array [],
      "root": [Circular],
      "rtc": null,
      "rtg": null,
      "scope": EffectScope {
        "active": true,
        "cleanups": Array [],
        "effects": Array [
          ReactiveEffect {
            "active": true,
            "allowRecurse": true,
            "deps": Array [
              Set {
                [Circular],
              },
              Set {
                [Circular],
              },
              Set {
                [Circular],
              },
            ],
            "fn": [Function],
            "onTrack": undefined,
            "onTrigger": undefined,
            "scheduler": [Function],
          },
        ],
      },
      "setupContext": null,
      "setupState": Object {},
      "slots": Object {},
      "sp": null,
      "subTree": Object {
        "__v_isVNode": true,
        "__v_skip": true,
        "anchor": null,
        "appContext": null,
        "children": null,
        "component": Object {
          "a": null,
          "accessCache": Object {
            "@@__IMMUTABLE_ITERABLE__@@": 0,
            "@@__IMMUTABLE_RECORD__@@": 0,
            "_isMockFunction": 0,
            "constructor": 0,
            "hasOwnProperty": 4,
            "isMenuOpen": 3,
            "isVueInstance": 0,
            "toJSON": 0,
            Symbol(Symbol.toStringTag): 0,
          },
          "appContext": Object {
            "app": [Circular],
            "components": Object {
              "transition": Object {
                "name": "transition",
              },
              "transition-group": Object {
                "name": "transition-group",
              },
            },
            "config": Object {
              "compilerOptions": Object {},
              "errorHandler": undefined,
              "globalProperties": Object {},
              "isNativeTag": [Function],
              "optionMergeStrategies": Object {},
              "performance": false,
              "warnHandler": undefined,
            },
            "directives": Object {},
            "emitsCache": WeakMap {},
            "mixins": Array [
              Object {
                "beforeCreate": [Function],
              },
            ],
            "optionsCache": WeakMap {},
            "propsCache": WeakMap {},
            "provides": Object {},
            "reload": [Function],
          },
          "asyncDep": null,
          "asyncResolved": false,
          "attrs": Object {},
          "bc": null,
          "bm": null,
          "bu": null,
          "bum": null,
          "c": null,
          "components": Object {
            "Button": Object {
              "computed": Object {},
              "extends": Object {},
              "methods": Object {
                "handleOnClick": [Function],
              },
              "props": Object {
                "disabled": [Function],
                "imageButton": [Function],
                "onClick": [Function],
              },
              "render": [Function],
              "setup": [Function],
            },
          },
          "ctx": Object {
            "hasOwnProperty": [Function],
            "isMenuOpen": true,
          },
          "da": null,
          "data": Object {},
          "devtoolsRawSetupState": Object {},
          "directives": null,
          "ec": null,
          "effect": ReactiveEffect {
            "active": true,
            "allowRecurse": true,
            "deps": Array [
              Set {
                [Circular],
              },
            ],
            "fn": [Function],
            "onTrack": undefined,
            "onTrigger": undefined,
            "scheduler": [Function],
          },
          "emit": [Function],
          "emitsOptions": null,
          "emitted": null,
          "exposeProxy": null,
          "exposed": null,
          "inheritAttrs": undefined,
          "isDeactivated": false,
          "isMounted": true,
          "isUnmounted": false,
          "m": null,
          "next": null,
          "parent": [Circular],
          "props": Object {
            "isMenuOpen": true,
          },
          "propsDefaults": Object {},
          "propsOptions": Array [
            Object {
              "isMenuOpen": Object {
                "0": true,
                "1": true,
                "type": [Function],
              },
            },
            Array [
              "isMenuOpen",
            ],
          ],
          "provides": Object {},
          "proxy": Object {
            "hasOwnProperty": [Function],
            "isMenuOpen": true,
          },
          "refs": Object {},
          "render": [Function],
          "renderCache": Array [],
          "root": [Circular],
          "rtc": null,
          "rtg": null,
          "scope": EffectScope {
            "active": true,
            "cleanups": Array [],
            "effects": Array [
              ReactiveEffect {
                "active": true,
                "allowRecurse": true,
                "deps": Array [
                  Set {
                    [Circular],
                  },
                ],
                "fn": [Function],
                "onTrack": undefined,
                "onTrigger": undefined,
                "scheduler": [Function],
              },
            ],
          },
          "setupContext": Object {
            "attrs": Object {},
            "emit": [Function],
            "expose": [Function],
            "slots": Object {},
          },
          "setupState": Object {},
          "slots": Object {},
          "sp": null,
          "subTree": Object {
            "__v_isVNode": true,
            "__v_skip": true,
            "anchor": null,
            "appContext": null,
            "children": Array [
              Object {
                "__v_isVNode": true,
                "__v_skip": true,
                "anchor": <div
                  class="page__sidebar__items"
                >
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Welcome 
                  </div>
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Get free insurance 
                  </div>
                </div>,
                "appContext": null,
                "children": <div class="page__sidebar__items">
  <div class="page__sidebar__items__item"><img src="undefined">Welcome </div>
  <div class="page__sidebar__items__item"><img src="undefined">Get free insurance </div>
</div>,
                "component": null,
                "dirs": null,
                "dynamicChildren": null,
                "dynamicProps": null,
                "el": <div
                  class="page__sidebar__items"
                >
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Welcome 
                  </div>
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Get free insurance 
                  </div>
                </div>,
                "key": null,
                "patchFlag": 0,
                "props": null,
                "ref": null,
                "scopeId": null,
                "shapeFlag": 8,
                "slotScopeIds": null,
                "ssContent": null,
                "ssFallback": null,
                "staticCount": 1,
                "suspense": null,
                "target": null,
                "targetAnchor": null,
                "transition": null,
                "type": Symbol(Static),
              },
              Object {
                "__v_isVNode": true,
                "__v_skip": true,
                "anchor": null,
                "appContext": null,
                "children": Object {
                  "_": 1,
                  "default": [Function],
                },
                "component": Object {
                  "a": null,
                  "accessCache": Object {},
                  "appContext": Object {
                    "app": [Circular],
                    "components": Object {
                      "transition": Object {
                        "name": "transition",
                      },
                      "transition-group": Object {
                        "name": "transition-group",
                      },
                    },
                    "config": Object {
                      "compilerOptions": Object {},
                      "errorHandler": undefined,
                      "globalProperties": Object {},
                      "isNativeTag": [Function],
                      "optionMergeStrategies": Object {},
                      "performance": false,
                      "warnHandler": undefined,
                    },
                    "directives": Object {},
                    "emitsCache": WeakMap {},
                    "mixins": Array [
                      Object {
                        "beforeCreate": [Function],
                      },
                    ],
                    "optionsCache": WeakMap {},
                    "propsCache": WeakMap {},
                    "provides": Object {},
                    "reload": [Function],
                  },
                  "asyncDep": null,
                  "asyncResolved": false,
                  "attrs": Object {
                    "class": "page__sidebar__file-a-claim-action",
                  },
                  "bc": null,
                  "bm": null,
                  "bu": null,
                  "bum": null,
                  "c": null,
                  "components": null,
                  "ctx": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "da": null,
                  "data": Object {},
                  "directives": null,
                  "ec": null,
                  "effect": ReactiveEffect {
                    "active": true,
                    "allowRecurse": true,
                    "deps": Array [
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                    ],
                    "fn": [Function],
                    "onTrack": undefined,
                    "onTrigger": undefined,
                    "scheduler": [Function],
                  },
                  "emit": [Function],
                  "emitsOptions": null,
                  "emitted": null,
                  "exposeProxy": null,
                  "exposed": null,
                  "inheritAttrs": undefined,
                  "isDeactivated": false,
                  "isMounted": true,
                  "isUnmounted": false,
                  "m": null,
                  "next": null,
                  "parent": [Circular],
                  "props": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "propsDefaults": Object {},
                  "propsOptions": Array [
                    Object {
                      "disabled": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "imageButton": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "onClick": Object {
                        "0": false,
                        "1": true,
                        "type": [Function],
                      },
                    },
                    Array [
                      "imageButton",
                      "disabled",
                    ],
                  ],
                  "provides": Object {},
                  "proxy": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "refs": Object {},
                  "render": [Function],
                  "renderCache": Array [],
                  "root": [Circular],
                  "rtc": null,
                  "rtg": null,
                  "scope": EffectScope {
                    "active": true,
                    "cleanups": Array [],
                    "effects": Array [
                      ReactiveEffect {
                        "active": true,
                        "allowRecurse": true,
                        "deps": Array [
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                        ],
                        "fn": [Function],
                        "onTrack": undefined,
                        "onTrigger": undefined,
                        "scheduler": [Function],
                      },
                    ],
                  },
                  "setupContext": null,
                  "setupState": Object {},
                  "slots": Object {
                    "default": [Function],
                  },
                  "sp": null,
                  "subTree": Object {
                    "__v_isVNode": true,
                    "__v_skip": true,
                    "anchor": null,
                    "appContext": null,
                    "children": null,
                    "component": null,
                    "dirs": null,
                    "dynamicChildren": null,
                    "dynamicProps": null,
                    "el": <button-stub
                      class="page__sidebar__file-a-claim-action"
                      disabled="false"
                      imagebutton="false"
                    />,
                    "key": null,
                    "patchFlag": 16,
                    "props": Object {
                      "class": "page__sidebar__file-a-claim-action",
                      "disabled": false,
                      "imageButton": false,
                    },
                    "ref": null,
                    "scopeId": null,
                    "shapeFlag": 1,
                    "slotScopeIds": null,
                    "ssContent": null,
                    "ssFallback": null,
                    "staticCount": 0,
                    "suspense": null,
                    "target": null,
                    "targetAnchor": null,
                    "transition": null,
                    "type": "button-stub",
                  },
                  "suspense": null,
                  "suspenseId": 0,
                  "type": Object {
                    "compatConfig": Object {
                      "MODE": 3,
                      "RENDER_FUNCTION": false,
                    },
                    "name": "Button",
                    "props": Object {
                      "disabled": [Function],
                      "imageButton": [Function],
                      "onClick": [Function],
                    },
                    "render": [Function],
                  },
                  "u": null,
                  "uid": 5,
                  "um": null,
                  "update": [Function],
                  "vnode": [Circular],
                  "withProxy": null,
                },
                "dirs": null,
                "dynamicChildren": null,
                "dynamicProps": null,
                "el": <button-stub
                  class="page__sidebar__file-a-claim-action"
                  disabled="false"
                  imagebutton="false"
                />,
                "key": null,
                "patchFlag": 0,
                "props": Object {
                  "class": "page__sidebar__file-a-claim-action",
                },
                "ref": null,
                "scopeId": null,
                "shapeFlag": 36,
                "slotScopeIds": null,
                "ssContent": null,
                "ssFallback": null,
                "staticCount": 0,
                "suspense": null,
                "target": null,
                "targetAnchor": null,
                "transition": null,
                "type": Object {
                  "compatConfig": Object {
                    "MODE": 3,
                    "RENDER_FUNCTION": false,
                  },
                  "name": "Button",
                  "props": Object {
                    "disabled": [Function],
                    "imageButton": [Function],
                    "onClick": [Function],
                  },
                  "render": [Function],
                },
              },
            ],
            "component": null,
            "dirs": null,
            "dynamicChildren": Array [
              Object {
                "__v_isVNode": true,
                "__v_skip": true,
                "anchor": null,
                "appContext": null,
                "children": Object {
                  "_": 1,
                  "default": [Function],
                },
                "component": Object {
                  "a": null,
                  "accessCache": Object {
                    "@@__IMMUTABLE_ITERABLE__@@": 0,
                    "@@__IMMUTABLE_RECORD__@@": 0,
                    "_isMockFunction": 0,
                    "constructor": 0,
                    "disabled": 3,
                    "imageButton": 3,
                    "isVueInstance": 0,
                    "onClick": 3,
                    "toJSON": 0,
                    Symbol(Symbol.toStringTag): 0,
                  },
                  "appContext": Object {
                    "app": [Circular],
                    "components": Object {
                      "transition": Object {
                        "name": "transition",
                      },
                      "transition-group": Object {
                        "name": "transition-group",
                      },
                    },
                    "config": Object {
                      "compilerOptions": Object {},
                      "errorHandler": undefined,
                      "globalProperties": Object {},
                      "isNativeTag": [Function],
                      "optionMergeStrategies": Object {},
                      "performance": false,
                      "warnHandler": undefined,
                    },
                    "directives": Object {},
                    "emitsCache": WeakMap {},
                    "mixins": Array [
                      Object {
                        "beforeCreate": [Function],
                      },
                    ],
                    "optionsCache": WeakMap {},
                    "propsCache": WeakMap {},
                    "provides": Object {},
                    "reload": [Function],
                  },
                  "asyncDep": null,
                  "asyncResolved": false,
                  "attrs": Object {
                    "class": "page__sidebar__file-a-claim-action",
                  },
                  "bc": null,
                  "bm": null,
                  "bu": null,
                  "bum": null,
                  "c": null,
                  "components": null,
                  "ctx": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "da": null,
                  "data": Object {},
                  "directives": null,
                  "ec": null,
                  "effect": ReactiveEffect {
                    "active": true,
                    "allowRecurse": true,
                    "deps": Array [
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                    ],
                    "fn": [Function],
                    "onTrack": undefined,
                    "onTrigger": undefined,
                    "scheduler": [Function],
                  },
                  "emit": [Function],
                  "emitsOptions": null,
                  "emitted": null,
                  "exposeProxy": null,
                  "exposed": null,
                  "inheritAttrs": undefined,
                  "isDeactivated": false,
                  "isMounted": true,
                  "isUnmounted": false,
                  "m": null,
                  "next": null,
                  "parent": [Circular],
                  "props": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "propsDefaults": Object {},
                  "propsOptions": Array [
                    Object {
                      "disabled": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "imageButton": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "onClick": Object {
                        "0": false,
                        "1": true,
                        "type": [Function],
                      },
                    },
                    Array [
                      "imageButton",
                      "disabled",
                    ],
                  ],
                  "provides": Object {},
                  "proxy": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "refs": Object {},
                  "render": [Function],
                  "renderCache": Array [],
                  "root": [Circular],
                  "rtc": null,
                  "rtg": null,
                  "scope": EffectScope {
                    "active": true,
                    "cleanups": Array [],
                    "effects": Array [
                      ReactiveEffect {
                        "active": true,
                        "allowRecurse": true,
                        "deps": Array [
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                        ],
                        "fn": [Function],
                        "onTrack": undefined,
                        "onTrigger": undefined,
                        "scheduler": [Function],
                      },
                    ],
                  },
                  "setupContext": null,
                  "setupState": Object {},
                  "slots": Object {
                    "default": [Function],
                  },
                  "sp": null,
                  "subTree": Object {
                    "__v_isVNode": true,
                    "__v_skip": true,
                    "anchor": null,
                    "appContext": null,
                    "children": null,
                    "component": null,
                    "dirs": null,
                    "dynamicChildren": null,
                    "dynamicProps": null,
                    "el": <button-stub
                      class="page__sidebar__file-a-claim-action"
                      disabled="false"
                      imagebutton="false"
                    />,
                    "key": null,
                    "patchFlag": 16,
                    "props": Object {
                      "class": "page__sidebar__file-a-claim-action",
                      "disabled": false,
                      "imageButton": false,
                    },
                    "ref": null,
                    "scopeId": null,
                    "shapeFlag": 1,
                    "slotScopeIds": null,
                    "ssContent": null,
                    "ssFallback": null,
                    "staticCount": 0,
                    "suspense": null,
                    "target": null,
                    "targetAnchor": null,
                    "transition": null,
                    "type": "button-stub",
                  },
                  "suspense": null,
                  "suspenseId": 0,
                  "type": Object {
                    "compatConfig": Object {
                      "MODE": 3,
                      "RENDER_FUNCTION": false,
                    },
                    "name": "Button",
                    "props": Object {
                      "disabled": [Function],
                      "imageButton": [Function],
                      "onClick": [Function],
                    },
                    "render": [Function],
                  },
                  "u": null,
                  "uid": 5,
                  "um": null,
                  "update": [Function],
                  "vnode": [Circular],
                  "withProxy": null,
                },
                "dirs": null,
                "dynamicChildren": null,
                "dynamicProps": null,
                "el": <button-stub
                  class="page__sidebar__file-a-claim-action"
                  disabled="false"
                  imagebutton="false"
                />,
                "key": null,
                "patchFlag": 0,
                "props": Object {
                  "class": "page__sidebar__file-a-claim-action",
                },
                "ref": null,
                "scopeId": null,
                "shapeFlag": 36,
                "slotScopeIds": null,
                "ssContent": null,
                "ssFallback": null,
                "staticCount": 0,
                "suspense": null,
                "target": null,
                "targetAnchor": null,
                "transition": null,
                "type": Object {
                  "compatConfig": Object {
                    "MODE": 3,
                    "RENDER_FUNCTION": false,
                  },
                  "name": "Button",
                  "props": Object {
                    "disabled": [Function],
                    "imageButton": [Function],
                    "onClick": [Function],
                  },
                  "render": [Function],
                },
              },
            ],
            "dynamicProps": null,
            "el": <div
              class="page__sidebar page__sidebar--open"
            >
              <div
                class="page__sidebar__items"
              >
                <div
                  class="page__sidebar__items__item"
                >
                  <img
                    src="undefined"
                  />
                  Welcome 
                </div>
                <div
                  class="page__sidebar__items__item"
                >
                  <img
                    src="undefined"
                  />
                  Get free insurance 
                </div>
              </div>
              <button-stub
                class="page__sidebar__file-a-claim-action"
                disabled="false"
                imagebutton="false"
              />
            </div>,
            "key": null,
            "patchFlag": 2,
            "props": Object {
              "class": "page__sidebar page__sidebar--open",
            },
            "ref": null,
            "scopeId": null,
            "shapeFlag": 17,
            "slotScopeIds": null,
            "ssContent": null,
            "ssFallback": null,
            "staticCount": 0,
            "suspense": null,
            "target": null,
            "targetAnchor": null,
            "transition": null,
            "type": "div",
          },
          "suspense": null,
          "suspenseId": 0,
          "type": Object {
            "components": Object {
              "Button": Object {
                "computed": Object {},
                "extends": Object {},
                "methods": Object {
                  "handleOnClick": [Function],
                },
                "props": Object {
                  "disabled": [Function],
                  "imageButton": [Function],
                  "onClick": [Function],
                },
                "render": [Function],
                "setup": [Function],
              },
            },
            "computed": Object {},
            "extends": Object {},
            "methods": Object {},
            "props": Object {
              "isMenuOpen": [Function],
            },
            "render": [Function],
            "setup": [Function],
          },
          "u": null,
          "uid": 4,
          "um": null,
          "update": [Function],
          "vnode": [Circular],
          "withProxy": null,
        },
        "dirs": null,
        "dynamicChildren": null,
        "dynamicProps": null,
        "el": <div
          class="page__sidebar page__sidebar--open"
        >
          <div
            class="page__sidebar__items"
          >
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Welcome 
            </div>
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Get free insurance 
            </div>
          </div>
          <button-stub
            class="page__sidebar__file-a-claim-action"
            disabled="false"
            imagebutton="false"
          />
        </div>,
        "key": null,
        "patchFlag": 0,
        "props": Object {
          "isMenuOpen": true,
          "ref": "VTU_COMPONENT",
        },
        "ref": Object {
          "f": false,
          "i": [Circular],
          "k": undefined,
          "r": "VTU_COMPONENT",
        },
        "scopeId": null,
        "shapeFlag": 4,
        "slotScopeIds": null,
        "ssContent": null,
        "ssFallback": null,
        "staticCount": 0,
        "suspense": null,
        "target": null,
        "targetAnchor": null,
        "transition": null,
        "type": Object {
          "components": Object {
            "Button": Object {
              "computed": Object {},
              "extends": Object {},
              "methods": Object {
                "handleOnClick": [Function],
              },
              "props": Object {
                "disabled": [Function],
                "imageButton": [Function],
                "onClick": [Function],
              },
              "render": [Function],
              "setup": [Function],
            },
          },
          "computed": Object {},
          "extends": Object {},
          "methods": Object {},
          "props": Object {
            "isMenuOpen": [Function],
          },
          "render": [Function],
          "setup": [Function],
        },
      },
      "suspense": null,
      "suspenseId": 0,
      "type": Object {
        "name": "VTU_ROOT",
        "render": [Function],
      },
      "u": null,
      "uid": 3,
      "um": null,
      "update": [Function],
      "vnode": Object {
        "__v_isVNode": true,
        "__v_skip": true,
        "anchor": null,
        "appContext": Object {
          "app": [Circular],
          "components": Object {
            "transition": Object {
              "name": "transition",
            },
            "transition-group": Object {
              "name": "transition-group",
            },
          },
          "config": Object {
            "compilerOptions": Object {},
            "errorHandler": undefined,
            "globalProperties": Object {},
            "isNativeTag": [Function],
            "optionMergeStrategies": Object {},
            "performance": false,
            "warnHandler": undefined,
          },
          "directives": Object {},
          "emitsCache": WeakMap {},
          "mixins": Array [
            Object {
              "beforeCreate": [Function],
            },
          ],
          "optionsCache": WeakMap {},
          "propsCache": WeakMap {},
          "provides": Object {},
          "reload": [Function],
        },
        "children": null,
        "component": [Circular],
        "dirs": null,
        "dynamicChildren": null,
        "dynamicProps": null,
        "el": <div
          class="page__sidebar page__sidebar--open"
        >
          <div
            class="page__sidebar__items"
          >
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Welcome 
            </div>
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Get free insurance 
            </div>
          </div>
          <button-stub
            class="page__sidebar__file-a-claim-action"
            disabled="false"
            imagebutton="false"
          />
        </div>,
        "key": null,
        "patchFlag": 0,
        "props": null,
        "ref": null,
        "scopeId": null,
        "shapeFlag": 4,
        "slotScopeIds": null,
        "ssContent": null,
        "ssFallback": null,
        "staticCount": 0,
        "suspense": null,
        "target": null,
        "targetAnchor": null,
        "transition": null,
        "type": Object {
          "name": "VTU_ROOT",
          "render": [Function],
        },
      },
      "withProxy": null,
    },
    "_props": null,
    "_uid": 1,
    "component": [Function],
    "config": Object {
      "compilerOptions": Object {},
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.2.29",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "hasOwnProperty": [Function],
    "isMenuOpen": true,
  },
  "isDisabled": [Function],
  "rootVM": Object {},
  "wrapperElement": <div
    class="page__sidebar page__sidebar--open"
  >
    <div
      class="page__sidebar__items"
    >
      <div
        class="page__sidebar__items__item"
      >
        <img
          src="undefined"
        />
        Welcome 
      </div>
      <div
        class="page__sidebar__items__item"
      >
        <img
          src="undefined"
        />
        Get free insurance 
      </div>
    </div>
    <button-stub
      class="page__sidebar__file-a-claim-action"
      disabled="false"
      imagebutton="false"
    />
  </div>,
}
`;

exports[`Sidebar should render and match snapshot 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <div
        class="page__sidebar"
      >
        <div
          class="page__sidebar__items"
        >
          <div
            class="page__sidebar__items__item"
          >
            <img
              src="undefined"
            />
            Welcome 
          </div>
          <div
            class="page__sidebar__items__item"
          >
            <img
              src="undefined"
            />
            Get free insurance 
          </div>
        </div>
        <button-stub
          class="page__sidebar__file-a-claim-action"
          disabled="false"
          imagebutton="false"
        />
      </div>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
        },
        "transition-group": Object {
          "name": "transition-group",
        },
      },
      "config": Object {
        "compilerOptions": Object {},
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "emitsCache": WeakMap {},
      "mixins": Array [
        Object {
          "beforeCreate": [Function],
        },
      ],
      "optionsCache": WeakMap {},
      "propsCache": WeakMap {},
      "provides": Object {},
      "reload": [Function],
    },
    "_instance": Object {
      "a": null,
      "accessCache": Object {},
      "appContext": Object {
        "app": [Circular],
        "components": Object {
          "transition": Object {
            "name": "transition",
          },
          "transition-group": Object {
            "name": "transition-group",
          },
        },
        "config": Object {
          "compilerOptions": Object {},
          "errorHandler": undefined,
          "globalProperties": Object {},
          "isNativeTag": [Function],
          "optionMergeStrategies": Object {},
          "performance": false,
          "warnHandler": undefined,
        },
        "directives": Object {},
        "emitsCache": WeakMap {},
        "mixins": Array [
          Object {
            "beforeCreate": [Function],
          },
        ],
        "optionsCache": WeakMap {},
        "propsCache": WeakMap {},
        "provides": Object {},
        "reload": [Function],
      },
      "asyncDep": null,
      "asyncResolved": false,
      "attrs": Object {},
      "bc": null,
      "bm": null,
      "bu": null,
      "bum": null,
      "c": null,
      "components": null,
      "ctx": Object {},
      "da": null,
      "data": Object {},
      "directives": null,
      "ec": null,
      "effect": ReactiveEffect {
        "active": true,
        "allowRecurse": true,
        "deps": Array [
          Set {
            [Circular],
          },
          Set {
            [Circular],
          },
        ],
        "fn": [Function],
        "onTrack": undefined,
        "onTrigger": undefined,
        "scheduler": [Function],
      },
      "emit": [Function],
      "emitsOptions": null,
      "emitted": null,
      "exposeProxy": null,
      "exposed": null,
      "inheritAttrs": undefined,
      "isDeactivated": false,
      "isMounted": true,
      "isUnmounted": false,
      "m": null,
      "next": null,
      "parent": null,
      "props": Object {},
      "propsDefaults": Object {},
      "propsOptions": Array [
        Object {},
        Array [],
      ],
      "provides": Object {},
      "proxy": Object {},
      "refs": Object {
        "VTU_COMPONENT": Object {
          "hasOwnProperty": [Function],
          "isMenuOpen": false,
        },
      },
      "render": [Function],
      "renderCache": Array [],
      "root": [Circular],
      "rtc": null,
      "rtg": null,
      "scope": EffectScope {
        "active": true,
        "cleanups": Array [],
        "effects": Array [
          ReactiveEffect {
            "active": true,
            "allowRecurse": true,
            "deps": Array [
              Set {
                [Circular],
              },
              Set {
                [Circular],
              },
            ],
            "fn": [Function],
            "onTrack": undefined,
            "onTrigger": undefined,
            "scheduler": [Function],
          },
        ],
      },
      "setupContext": null,
      "setupState": Object {},
      "slots": Object {},
      "sp": null,
      "subTree": Object {
        "__v_isVNode": true,
        "__v_skip": true,
        "anchor": null,
        "appContext": null,
        "children": null,
        "component": Object {
          "a": null,
          "accessCache": Object {
            "@@__IMMUTABLE_ITERABLE__@@": 0,
            "@@__IMMUTABLE_RECORD__@@": 0,
            "_isMockFunction": 0,
            "constructor": 0,
            "hasOwnProperty": 4,
            "isMenuOpen": 3,
            "isVueInstance": 0,
            "toJSON": 0,
            Symbol(Symbol.toStringTag): 0,
          },
          "appContext": Object {
            "app": [Circular],
            "components": Object {
              "transition": Object {
                "name": "transition",
              },
              "transition-group": Object {
                "name": "transition-group",
              },
            },
            "config": Object {
              "compilerOptions": Object {},
              "errorHandler": undefined,
              "globalProperties": Object {},
              "isNativeTag": [Function],
              "optionMergeStrategies": Object {},
              "performance": false,
              "warnHandler": undefined,
            },
            "directives": Object {},
            "emitsCache": WeakMap {},
            "mixins": Array [
              Object {
                "beforeCreate": [Function],
              },
            ],
            "optionsCache": WeakMap {},
            "propsCache": WeakMap {},
            "provides": Object {},
            "reload": [Function],
          },
          "asyncDep": null,
          "asyncResolved": false,
          "attrs": Object {},
          "bc": null,
          "bm": null,
          "bu": null,
          "bum": null,
          "c": null,
          "components": Object {
            "Button": Object {
              "computed": Object {},
              "extends": Object {},
              "methods": Object {
                "handleOnClick": [Function],
              },
              "props": Object {
                "disabled": [Function],
                "imageButton": [Function],
                "onClick": [Function],
              },
              "render": [Function],
              "setup": [Function],
            },
          },
          "ctx": Object {
            "hasOwnProperty": [Function],
            "isMenuOpen": false,
          },
          "da": null,
          "data": Object {},
          "devtoolsRawSetupState": Object {},
          "directives": null,
          "ec": null,
          "effect": ReactiveEffect {
            "active": true,
            "allowRecurse": true,
            "deps": Array [
              Set {
                [Circular],
              },
            ],
            "fn": [Function],
            "onTrack": undefined,
            "onTrigger": undefined,
            "scheduler": [Function],
          },
          "emit": [Function],
          "emitsOptions": null,
          "emitted": null,
          "exposeProxy": null,
          "exposed": null,
          "inheritAttrs": undefined,
          "isDeactivated": false,
          "isMounted": true,
          "isUnmounted": false,
          "m": null,
          "next": null,
          "parent": [Circular],
          "props": Object {
            "isMenuOpen": false,
          },
          "propsDefaults": Object {},
          "propsOptions": Array [
            Object {
              "isMenuOpen": Object {
                "0": true,
                "1": true,
                "type": [Function],
              },
            },
            Array [
              "isMenuOpen",
            ],
          ],
          "provides": Object {},
          "proxy": Object {
            "hasOwnProperty": [Function],
            "isMenuOpen": false,
          },
          "refs": Object {},
          "render": [Function],
          "renderCache": Array [],
          "root": [Circular],
          "rtc": null,
          "rtg": null,
          "scope": EffectScope {
            "active": true,
            "cleanups": Array [],
            "effects": Array [
              ReactiveEffect {
                "active": true,
                "allowRecurse": true,
                "deps": Array [
                  Set {
                    [Circular],
                  },
                ],
                "fn": [Function],
                "onTrack": undefined,
                "onTrigger": undefined,
                "scheduler": [Function],
              },
            ],
          },
          "setupContext": Object {
            "attrs": Object {},
            "emit": [Function],
            "expose": [Function],
            "slots": Object {},
          },
          "setupState": Object {},
          "slots": Object {},
          "sp": null,
          "subTree": Object {
            "__v_isVNode": true,
            "__v_skip": true,
            "anchor": null,
            "appContext": null,
            "children": Array [
              Object {
                "__v_isVNode": true,
                "__v_skip": true,
                "anchor": <div
                  class="page__sidebar__items"
                >
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Welcome 
                  </div>
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Get free insurance 
                  </div>
                </div>,
                "appContext": null,
                "children": <div class="page__sidebar__items">
  <div class="page__sidebar__items__item"><img src="undefined">Welcome </div>
  <div class="page__sidebar__items__item"><img src="undefined">Get free insurance </div>
</div>,
                "component": null,
                "dirs": null,
                "dynamicChildren": null,
                "dynamicProps": null,
                "el": <div
                  class="page__sidebar__items"
                >
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Welcome 
                  </div>
                  <div
                    class="page__sidebar__items__item"
                  >
                    <img
                      src="undefined"
                    />
                    Get free insurance 
                  </div>
                </div>,
                "key": null,
                "patchFlag": 0,
                "props": null,
                "ref": null,
                "scopeId": null,
                "shapeFlag": 8,
                "slotScopeIds": null,
                "ssContent": null,
                "ssFallback": null,
                "staticCount": 1,
                "suspense": null,
                "target": null,
                "targetAnchor": null,
                "transition": null,
                "type": Symbol(Static),
              },
              Object {
                "__v_isVNode": true,
                "__v_skip": true,
                "anchor": null,
                "appContext": null,
                "children": Object {
                  "default": [Function],
                },
                "component": Object {
                  "a": null,
                  "accessCache": Object {},
                  "appContext": Object {
                    "app": [Circular],
                    "components": Object {
                      "transition": Object {
                        "name": "transition",
                      },
                      "transition-group": Object {
                        "name": "transition-group",
                      },
                    },
                    "config": Object {
                      "compilerOptions": Object {},
                      "errorHandler": undefined,
                      "globalProperties": Object {},
                      "isNativeTag": [Function],
                      "optionMergeStrategies": Object {},
                      "performance": false,
                      "warnHandler": undefined,
                    },
                    "directives": Object {},
                    "emitsCache": WeakMap {},
                    "mixins": Array [
                      Object {
                        "beforeCreate": [Function],
                      },
                    ],
                    "optionsCache": WeakMap {},
                    "propsCache": WeakMap {},
                    "provides": Object {},
                    "reload": [Function],
                  },
                  "asyncDep": null,
                  "asyncResolved": false,
                  "attrs": Object {
                    "class": "page__sidebar__file-a-claim-action",
                  },
                  "bc": null,
                  "bm": null,
                  "bu": null,
                  "bum": null,
                  "c": null,
                  "components": null,
                  "ctx": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "da": null,
                  "data": Object {},
                  "directives": null,
                  "ec": null,
                  "effect": ReactiveEffect {
                    "active": true,
                    "allowRecurse": true,
                    "deps": Array [
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                    ],
                    "fn": [Function],
                    "onTrack": undefined,
                    "onTrigger": undefined,
                    "scheduler": [Function],
                  },
                  "emit": [Function],
                  "emitsOptions": null,
                  "emitted": null,
                  "exposeProxy": null,
                  "exposed": null,
                  "inheritAttrs": undefined,
                  "isDeactivated": false,
                  "isMounted": true,
                  "isUnmounted": false,
                  "m": null,
                  "next": null,
                  "parent": [Circular],
                  "props": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "propsDefaults": Object {},
                  "propsOptions": Array [
                    Object {
                      "disabled": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "imageButton": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "onClick": Object {
                        "0": false,
                        "1": true,
                        "type": [Function],
                      },
                    },
                    Array [
                      "imageButton",
                      "disabled",
                    ],
                  ],
                  "provides": Object {},
                  "proxy": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "refs": Object {},
                  "render": [Function],
                  "renderCache": Array [],
                  "root": [Circular],
                  "rtc": null,
                  "rtg": null,
                  "scope": EffectScope {
                    "active": true,
                    "cleanups": Array [],
                    "effects": Array [
                      ReactiveEffect {
                        "active": true,
                        "allowRecurse": true,
                        "deps": Array [
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                        ],
                        "fn": [Function],
                        "onTrack": undefined,
                        "onTrigger": undefined,
                        "scheduler": [Function],
                      },
                    ],
                  },
                  "setupContext": null,
                  "setupState": Object {},
                  "slots": Object {
                    "default": [Function],
                  },
                  "sp": null,
                  "subTree": Object {
                    "__v_isVNode": true,
                    "__v_skip": true,
                    "anchor": null,
                    "appContext": null,
                    "children": null,
                    "component": null,
                    "dirs": null,
                    "dynamicChildren": null,
                    "dynamicProps": null,
                    "el": <button-stub
                      class="page__sidebar__file-a-claim-action"
                      disabled="false"
                      imagebutton="false"
                    />,
                    "key": null,
                    "patchFlag": 16,
                    "props": Object {
                      "class": "page__sidebar__file-a-claim-action",
                      "disabled": false,
                      "imageButton": false,
                    },
                    "ref": null,
                    "scopeId": null,
                    "shapeFlag": 1,
                    "slotScopeIds": null,
                    "ssContent": null,
                    "ssFallback": null,
                    "staticCount": 0,
                    "suspense": null,
                    "target": null,
                    "targetAnchor": null,
                    "transition": null,
                    "type": "button-stub",
                  },
                  "suspense": null,
                  "suspenseId": 0,
                  "type": Object {
                    "compatConfig": Object {
                      "MODE": 3,
                      "RENDER_FUNCTION": false,
                    },
                    "name": "Button",
                    "props": Object {
                      "disabled": [Function],
                      "imageButton": [Function],
                      "onClick": [Function],
                    },
                    "render": [Function],
                  },
                  "u": null,
                  "uid": 2,
                  "um": null,
                  "update": [Function],
                  "vnode": [Circular],
                  "withProxy": null,
                },
                "dirs": null,
                "dynamicChildren": null,
                "dynamicProps": null,
                "el": <button-stub
                  class="page__sidebar__file-a-claim-action"
                  disabled="false"
                  imagebutton="false"
                />,
                "key": null,
                "patchFlag": 0,
                "props": Object {
                  "class": "page__sidebar__file-a-claim-action",
                },
                "ref": null,
                "scopeId": null,
                "shapeFlag": 36,
                "slotScopeIds": null,
                "ssContent": null,
                "ssFallback": null,
                "staticCount": 0,
                "suspense": null,
                "target": null,
                "targetAnchor": null,
                "transition": null,
                "type": Object {
                  "compatConfig": Object {
                    "MODE": 3,
                    "RENDER_FUNCTION": false,
                  },
                  "name": "Button",
                  "props": Object {
                    "disabled": [Function],
                    "imageButton": [Function],
                    "onClick": [Function],
                  },
                  "render": [Function],
                },
              },
            ],
            "component": null,
            "dirs": null,
            "dynamicChildren": Array [
              Object {
                "__v_isVNode": true,
                "__v_skip": true,
                "anchor": null,
                "appContext": null,
                "children": Object {
                  "default": [Function],
                },
                "component": Object {
                  "a": null,
                  "accessCache": Object {
                    "@@__IMMUTABLE_ITERABLE__@@": 0,
                    "@@__IMMUTABLE_RECORD__@@": 0,
                    "_isMockFunction": 0,
                    "constructor": 0,
                    "disabled": 3,
                    "imageButton": 3,
                    "isVueInstance": 0,
                    "onClick": 3,
                    "toJSON": 0,
                    Symbol(Symbol.toStringTag): 0,
                  },
                  "appContext": Object {
                    "app": [Circular],
                    "components": Object {
                      "transition": Object {
                        "name": "transition",
                      },
                      "transition-group": Object {
                        "name": "transition-group",
                      },
                    },
                    "config": Object {
                      "compilerOptions": Object {},
                      "errorHandler": undefined,
                      "globalProperties": Object {},
                      "isNativeTag": [Function],
                      "optionMergeStrategies": Object {},
                      "performance": false,
                      "warnHandler": undefined,
                    },
                    "directives": Object {},
                    "emitsCache": WeakMap {},
                    "mixins": Array [
                      Object {
                        "beforeCreate": [Function],
                      },
                    ],
                    "optionsCache": WeakMap {},
                    "propsCache": WeakMap {},
                    "provides": Object {},
                    "reload": [Function],
                  },
                  "asyncDep": null,
                  "asyncResolved": false,
                  "attrs": Object {
                    "class": "page__sidebar__file-a-claim-action",
                  },
                  "bc": null,
                  "bm": null,
                  "bu": null,
                  "bum": null,
                  "c": null,
                  "components": null,
                  "ctx": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "da": null,
                  "data": Object {},
                  "directives": null,
                  "ec": null,
                  "effect": ReactiveEffect {
                    "active": true,
                    "allowRecurse": true,
                    "deps": Array [
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                      Set {
                        [Circular],
                      },
                    ],
                    "fn": [Function],
                    "onTrack": undefined,
                    "onTrigger": undefined,
                    "scheduler": [Function],
                  },
                  "emit": [Function],
                  "emitsOptions": null,
                  "emitted": null,
                  "exposeProxy": null,
                  "exposed": null,
                  "inheritAttrs": undefined,
                  "isDeactivated": false,
                  "isMounted": true,
                  "isUnmounted": false,
                  "m": null,
                  "next": null,
                  "parent": [Circular],
                  "props": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "propsDefaults": Object {},
                  "propsOptions": Array [
                    Object {
                      "disabled": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "imageButton": Object {
                        "0": true,
                        "1": true,
                        "type": [Function],
                      },
                      "onClick": Object {
                        "0": false,
                        "1": true,
                        "type": [Function],
                      },
                    },
                    Array [
                      "imageButton",
                      "disabled",
                    ],
                  ],
                  "provides": Object {},
                  "proxy": Object {
                    "disabled": false,
                    "imageButton": false,
                    "onClick": undefined,
                  },
                  "refs": Object {},
                  "render": [Function],
                  "renderCache": Array [],
                  "root": [Circular],
                  "rtc": null,
                  "rtg": null,
                  "scope": EffectScope {
                    "active": true,
                    "cleanups": Array [],
                    "effects": Array [
                      ReactiveEffect {
                        "active": true,
                        "allowRecurse": true,
                        "deps": Array [
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                          Set {
                            [Circular],
                          },
                        ],
                        "fn": [Function],
                        "onTrack": undefined,
                        "onTrigger": undefined,
                        "scheduler": [Function],
                      },
                    ],
                  },
                  "setupContext": null,
                  "setupState": Object {},
                  "slots": Object {
                    "default": [Function],
                  },
                  "sp": null,
                  "subTree": Object {
                    "__v_isVNode": true,
                    "__v_skip": true,
                    "anchor": null,
                    "appContext": null,
                    "children": null,
                    "component": null,
                    "dirs": null,
                    "dynamicChildren": null,
                    "dynamicProps": null,
                    "el": <button-stub
                      class="page__sidebar__file-a-claim-action"
                      disabled="false"
                      imagebutton="false"
                    />,
                    "key": null,
                    "patchFlag": 16,
                    "props": Object {
                      "class": "page__sidebar__file-a-claim-action",
                      "disabled": false,
                      "imageButton": false,
                    },
                    "ref": null,
                    "scopeId": null,
                    "shapeFlag": 1,
                    "slotScopeIds": null,
                    "ssContent": null,
                    "ssFallback": null,
                    "staticCount": 0,
                    "suspense": null,
                    "target": null,
                    "targetAnchor": null,
                    "transition": null,
                    "type": "button-stub",
                  },
                  "suspense": null,
                  "suspenseId": 0,
                  "type": Object {
                    "compatConfig": Object {
                      "MODE": 3,
                      "RENDER_FUNCTION": false,
                    },
                    "name": "Button",
                    "props": Object {
                      "disabled": [Function],
                      "imageButton": [Function],
                      "onClick": [Function],
                    },
                    "render": [Function],
                  },
                  "u": null,
                  "uid": 2,
                  "um": null,
                  "update": [Function],
                  "vnode": [Circular],
                  "withProxy": null,
                },
                "dirs": null,
                "dynamicChildren": null,
                "dynamicProps": null,
                "el": <button-stub
                  class="page__sidebar__file-a-claim-action"
                  disabled="false"
                  imagebutton="false"
                />,
                "key": null,
                "patchFlag": 0,
                "props": Object {
                  "class": "page__sidebar__file-a-claim-action",
                },
                "ref": null,
                "scopeId": null,
                "shapeFlag": 36,
                "slotScopeIds": null,
                "ssContent": null,
                "ssFallback": null,
                "staticCount": 0,
                "suspense": null,
                "target": null,
                "targetAnchor": null,
                "transition": null,
                "type": Object {
                  "compatConfig": Object {
                    "MODE": 3,
                    "RENDER_FUNCTION": false,
                  },
                  "name": "Button",
                  "props": Object {
                    "disabled": [Function],
                    "imageButton": [Function],
                    "onClick": [Function],
                  },
                  "render": [Function],
                },
              },
            ],
            "dynamicProps": null,
            "el": <div
              class="page__sidebar"
            >
              <div
                class="page__sidebar__items"
              >
                <div
                  class="page__sidebar__items__item"
                >
                  <img
                    src="undefined"
                  />
                  Welcome 
                </div>
                <div
                  class="page__sidebar__items__item"
                >
                  <img
                    src="undefined"
                  />
                  Get free insurance 
                </div>
              </div>
              <button-stub
                class="page__sidebar__file-a-claim-action"
                disabled="false"
                imagebutton="false"
              />
            </div>,
            "key": null,
            "patchFlag": 2,
            "props": Object {
              "class": "page__sidebar",
            },
            "ref": null,
            "scopeId": null,
            "shapeFlag": 17,
            "slotScopeIds": null,
            "ssContent": null,
            "ssFallback": null,
            "staticCount": 0,
            "suspense": null,
            "target": null,
            "targetAnchor": null,
            "transition": null,
            "type": "div",
          },
          "suspense": null,
          "suspenseId": 0,
          "type": Object {
            "components": Object {
              "Button": Object {
                "computed": Object {},
                "extends": Object {},
                "methods": Object {
                  "handleOnClick": [Function],
                },
                "props": Object {
                  "disabled": [Function],
                  "imageButton": [Function],
                  "onClick": [Function],
                },
                "render": [Function],
                "setup": [Function],
              },
            },
            "computed": Object {},
            "extends": Object {},
            "methods": Object {},
            "props": Object {
              "isMenuOpen": [Function],
            },
            "render": [Function],
            "setup": [Function],
          },
          "u": null,
          "uid": 1,
          "um": null,
          "update": [Function],
          "vnode": [Circular],
          "withProxy": null,
        },
        "dirs": null,
        "dynamicChildren": null,
        "dynamicProps": null,
        "el": <div
          class="page__sidebar"
        >
          <div
            class="page__sidebar__items"
          >
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Welcome 
            </div>
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Get free insurance 
            </div>
          </div>
          <button-stub
            class="page__sidebar__file-a-claim-action"
            disabled="false"
            imagebutton="false"
          />
        </div>,
        "key": null,
        "patchFlag": 0,
        "props": Object {
          "ref": "VTU_COMPONENT",
        },
        "ref": Object {
          "f": false,
          "i": [Circular],
          "k": undefined,
          "r": "VTU_COMPONENT",
        },
        "scopeId": null,
        "shapeFlag": 4,
        "slotScopeIds": null,
        "ssContent": null,
        "ssFallback": null,
        "staticCount": 0,
        "suspense": null,
        "target": null,
        "targetAnchor": null,
        "transition": null,
        "type": Object {
          "components": Object {
            "Button": Object {
              "computed": Object {},
              "extends": Object {},
              "methods": Object {
                "handleOnClick": [Function],
              },
              "props": Object {
                "disabled": [Function],
                "imageButton": [Function],
                "onClick": [Function],
              },
              "render": [Function],
              "setup": [Function],
            },
          },
          "computed": Object {},
          "extends": Object {},
          "methods": Object {},
          "props": Object {
            "isMenuOpen": [Function],
          },
          "render": [Function],
          "setup": [Function],
        },
      },
      "suspense": null,
      "suspenseId": 0,
      "type": Object {
        "name": "VTU_ROOT",
        "render": [Function],
      },
      "u": null,
      "uid": 0,
      "um": null,
      "update": [Function],
      "vnode": Object {
        "__v_isVNode": true,
        "__v_skip": true,
        "anchor": null,
        "appContext": Object {
          "app": [Circular],
          "components": Object {
            "transition": Object {
              "name": "transition",
            },
            "transition-group": Object {
              "name": "transition-group",
            },
          },
          "config": Object {
            "compilerOptions": Object {},
            "errorHandler": undefined,
            "globalProperties": Object {},
            "isNativeTag": [Function],
            "optionMergeStrategies": Object {},
            "performance": false,
            "warnHandler": undefined,
          },
          "directives": Object {},
          "emitsCache": WeakMap {},
          "mixins": Array [
            Object {
              "beforeCreate": [Function],
            },
          ],
          "optionsCache": WeakMap {},
          "propsCache": WeakMap {},
          "provides": Object {},
          "reload": [Function],
        },
        "children": null,
        "component": [Circular],
        "dirs": null,
        "dynamicChildren": null,
        "dynamicProps": null,
        "el": <div
          class="page__sidebar"
        >
          <div
            class="page__sidebar__items"
          >
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Welcome 
            </div>
            <div
              class="page__sidebar__items__item"
            >
              <img
                src="undefined"
              />
              Get free insurance 
            </div>
          </div>
          <button-stub
            class="page__sidebar__file-a-claim-action"
            disabled="false"
            imagebutton="false"
          />
        </div>,
        "key": null,
        "patchFlag": 0,
        "props": null,
        "ref": null,
        "scopeId": null,
        "shapeFlag": 4,
        "slotScopeIds": null,
        "ssContent": null,
        "ssFallback": null,
        "staticCount": 0,
        "suspense": null,
        "target": null,
        "targetAnchor": null,
        "transition": null,
        "type": Object {
          "name": "VTU_ROOT",
          "render": [Function],
        },
      },
      "withProxy": null,
    },
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": Object {
      "compilerOptions": Object {},
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.2.29",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "hasOwnProperty": [Function],
    "isMenuOpen": false,
  },
  "isDisabled": [Function],
  "rootVM": Object {},
  "wrapperElement": <div
    class="page__sidebar"
  >
    <div
      class="page__sidebar__items"
    >
      <div
        class="page__sidebar__items__item"
      >
        <img
          src="undefined"
        />
        Welcome 
      </div>
      <div
        class="page__sidebar__items__item"
      >
        <img
          src="undefined"
        />
        Get free insurance 
      </div>
    </div>
    <button-stub
      class="page__sidebar__file-a-claim-action"
      disabled="false"
      imagebutton="false"
    />
  </div>,
}
`;
